fix(head): compensate line clamping for hidden underline

--- a/components/hero/src/Hero.module.scss
+++ b/components/hero/src/Hero.module.scss
@@ -34,6 +34,17 @@ $hero-breakpoint-sm: 769px;
     @media (min-width: $hero-breakpoint-sm) {
       &--truncated {
         -webkit-line-clamp: 2;
+
+        &::before {
+          background-color: $color-theme-accent;
+          content: "";
+          display: block;
+          height: 4px;
+          margin-top: 1rem;
+          width: 100px;
+          position: absolute;
+          top: 3em;
+        }
       }
     }
 
